# QFluentKit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_ZH.md  fix-png-icc.ps1
MinimalExample/: AcrylicWidget.cpp  AcrylicWidget.h  CMakeLists.txt  acrylicwidget.cpp  main.cpp  widget.cpp  widget.h  widget.ui
QFluent/: .gitignore  CMakeLists.txt  LICENSE  README.md  copy.ps1  version.rc
QFluent/cmake/: QFluentConfig.cmake.in
QFluent/res/: res.qrc  shared.qrc
QFluent/res/style/: dark-style.qss  light-style.qss
QFluent/res/style/dark/: button.qss  combo_box.qss  dialog.qss  fluent_window.qss  line_edit.qss  menu.qss  pivot.qss  spin_box.qss  table_view.qss  time_picker.qss  title_bar.qss
QFluent/res/style/light/: button.qss  combo_box.qss  dialog.qss  fluent_window.qss  line_edit.qss  menu.qss  pivot.qss  spin_box.qss  table_view.qss  time_picker.qss  title_bar.qss
QFluent/src/: Animation.cpp  Animation.h  Define.h  FluentGlobal.h  FluentIcon.cpp  FluentIcon.h  Icon.cpp  Icon.h  IconEngine.cpp  IconEngine.h  Property.h  Router.cpp  Router.h  Screen.cpp  Screen.h  StyleSheet.cpp  StyleSheet.h  TextWrap.cpp  TextWrap.h  Theme.cpp  Theme.h
QFluent/src/Private/: AnimationPrivate.cpp  AnimationPrivate.h  CheckBoxPrivate.cpp  CheckBoxPrivate.h  ComboBoxHelper.cpp  ComboBoxHelper.h  ComboBoxPrivate.cpp  ComboBoxPrivate.h  ComboItem.h  ComboItemModel.cpp  ComboItemModel.h  EditableComboBoxPrivate.cpp  EditableComboBoxPrivate.h  FluentSplitWindowPrivate.cpp  FluentSplitWindowPrivate.h  FluentTitleBarPrivate.cpp  FluentTitleBarPrivate.h  FluentWidgetPrivate.cpp  FluentWidgetPrivate.h  FluentWindowPrivate.cpp  FluentWindowPrivate.h  IconWidgetPrivate.cpp  IconWidgetPrivate.h  MultiViewComboBoxPrivate.cpp  MultiViewComboBoxPrivate.h  ScrollBarPrivate.cpp  ScrollBarPrivate.h  ScrollBarStyle.cpp  ScrollBarStyle.h  TextWrapPrivate.cpp  TextWrapPrivate.h  ThemePrivate.cpp  ThemePrivate.h
QFluent/src/Private/Dialog/: MaskDialogBasePrivate.cpp  MaskDialogBasePrivate.h  MessageBoxBasePrivate.h  MessageDialogPrivate.cpp  MessageDialogPrivate.h
QFluent/src/Private/Menu/: RoundMenuPrivate.cpp  RoundMenuPrivate.h
QFluent/src/Private/dialog/: MaskDialogBasePrivate.cpp  MaskDialogBasePrivate.h  MessageBoxBasePrivate.cpp  MessageBoxBasePrivate.h  MessageDialogPrivate.cpp  MessageDialogPrivate.h
QFluent/src/Private/menu/: RoundMenuPrivate.cpp  RoundMenuPrivate.h
QFluent/src/QFluent/: AvatarWidget.cpp  AvatarWidget.h  CardWidget.cpp  CardWidget.h  CheckBox.cpp  CheckBox.h  ComboBox.cpp  ComboBox.h  Dialog.cpp  Dialog.h  EditableComboBox.cpp  EditableComboBox.h  FluentSplitWindow.cpp  FluentSplitWindow.h  FluentTitleBar.cpp  FluentTitleBar.h  FluentWidget.cpp  FluentWidget.h  FluentWindow.cpp  FluentWindow.h  Flyout.cpp  Flyout.h  IconWidget.cpp  IconWidget.h  ImageLabel.cpp  ImageLabel.h  InfoBar.cpp  InfoBar.h  Label.cpp  Label.h  LineEdit.cpp  LineEdit.h  ListView.cpp  ListView.h  Loading.cpp  Loading.h  MaskDialogBase.cpp  MaskDialogBase.h  MenuAnimation.cpp  MenuAnimation.h  (+41 more)
QFluent/src/QFluent/DateTime/: CalendarPicker.cpp  CalendarPicker.h  CalendarView.cpp  CalendarView.h  CycleListWidget.cpp  CycleListWidget.h  DatePicker.cpp  DatePicker.h  PickerBase.cpp  PickerBase.h  TimePicker.cpp  TimePicker.h
QFluent/src/QFluent/Dialog/: ColorDialog.cpp  ColorDialog.h  MaskDialogBase.cpp  MaskDialogBase.h  MessageBoxBase.cpp  MessageBoxBase.h  MessageDialog.cpp
QFluent/src/QFluent/Layout/: AdaptiveFlowLayout.cpp  AdaptiveFlowLayout.h  ExpandLayout.cpp  FlowLayout.cpp  FlowLayout.h
QFluent/src/QFluent/Material/: AcrylicCheckableMenu.cpp  AcrylicCheckableMenu.h  AcrylicLabel.cpp  AcrylicLabel.h  AcrylicMenu.cpp  AcrylicMenu.h  AcrylicToolTip.cpp  AcrylicToolTip.h  AcrylicWidget.cpp  AcrylicWidget.h
QFluent/src/QFluent/Menu/: CheckableMenu.cpp  CheckableMenu.h  ComboBoxMenu.cpp  ComboBoxMenu.h  MenuActionListWidget.cpp  MenuActionListWidget.h  MenuAnimation.cpp  MenuAnimation.h  MenuItemDelegate.cpp  MenuItemDelegate.h  MultiViewComboBoxMenu.cpp  MultiViewComboBoxMenu.h  RoundMenu.cpp  RoundMenu.h  SubMenuItemWidget.cpp  SubMenuItemWidget.h
QFluent/src/QFluent/Navigation/: NavigationBar.cpp  NavigationBar.h  Pivot.cpp  (+7 more)
QFluent/src/common/: Router.cpp  Screen.cpp  Screen.h  TextWrap.cpp  TextWrap.h  Theme.cpp  Theme.h
QFluent/src/components/: CheckBox.cpp  CheckBox.h  ComboBox.cpp  ComboBox.h  Dialog.cpp  Dialog.h  EditableComboBox.cpp  EditableComboBox.h  FluentIcon.cpp  FluentIcon.h  FluentTitleBar.cpp  FluentTitleBar.h  FluentWindow.cpp  FluentWindow.h  IconWidget.cpp  IconWidget.h  InfoBar.cpp  InfoBar.h  Label.cpp  Label.h  LineEdit.cpp  LineEdit.h  Loading.cpp  Loading.h  MaskDialogBase.cpp  MenuAnimation.cpp  MenuAnimation.h  PagiNation.cpp  PagiNation.h  ProgressRing.cpp  ProgressRing.h  PushButton.cpp  PushButton.h  RadioButton.cpp  RadioButton.h  RoundMenu.cpp  RoundMenu.h  ScrollArea.h  SpinBox.cpp  SpinBox.h  (+7 more)
QFluentExample/: CMakeLists.txt
QFluentExample/libs/src/: FluentIcon.h  Property.h  TextWrap.h
QFluentExample/res/: res.qrc
QFluentExample/src/: BasicInputInterface.cpp  BasicInputInterface.h  ConfigManager.h  DateTimeInputInterface.cpp  DateTimeInputInterface.h  DialogInputInterface.cpp  DialogInputInterface.h  FluentWindow.cpp.md  GalleryInterface.cpp  GalleryInterface.h  HomeInterface.cpp  HomeInterface.h  IconInterface.cpp  IconInterface.h  LayoutInterface.cpp  LayoutInterface.h  MainWindow.cpp  MainWindow.h  MaterialInterface.cpp  MaterialInterface.h  MenuInterface.cpp  MenuInterface.h  NavigationViewInterface.cpp  NavigationViewInterface.h  ScrollInterface.cpp  SettingInterface.cpp  SettingInterface.h  StatusInfoInterface.cpp  StatusInfoInterface.h  TextInterface.cpp  TextInterface.h  ViewInterface.cpp  ViewInterface.h  WindowInterface.cpp  WindowInterface.h  main.cpp
QFluentExample/src/Card/: LinkCard.cpp  LinkCard.h  SampleCard.cpp  SampleCard.h
QFluentExample/src/Window/: FluentTitleBar.cpp  FluentTitleBar.h  FluentWidget.cpp  FluentWidget.h  LoginWindow.cpp  LoginWindow.h  NavbarWindow.cpp  NavbarWindow.h  SplitWindow.cpp  SplitWindow.h
(+146 files in other folders)
